# SomeRPGGame

./: .env.example  CONTRIBUTING.md  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_players.py
astrarpg/: config.py
astrarpg/adapters/: __init__.py  cli.py  discord_bot.py
astrarpg/engine/: __init__.py  basebuilding.py  combat.py  commands.py  economy.py  farming.py  formatters.py  generation.py  loot.py  map.py  models.py  persistence.py  pets.py  skilltree.py
astrarpg/genai/: __init__.py  client.py  prompts.py
docs/: IDEAS.md  TESTING.md
tests/: conftest.py  test_bestiary_shrine.py  test_combat.py  test_commands.py  test_equip_sell.py  test_generation.py  test_loot_shop.py  test_map.py  test_migrations.py  test_persistence.py
